clusters/cluster/apps/verein-int/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: verein-int
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: outline
          image: docker.io/outlinewiki/outline:1.5.0 # {"$imagepolicy": "flux-system:outline"}
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: outline-storage
              mountPath: /var/lib/outline/data
      volumes:
        - name: outline-storage
          persistentVolumeClaim:
            claimName: outline-storage-pvc-claim-new
