clusters/cluster/apps/verein-int/outline/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-db
  namespace: verein-int
spec:
  type: ClusterIP
  selector:
    app: outline-db
  ports:
    - port: 5432
      targetPort: postgres
      name: postgres
