clusters/cluster/apps/verein-int/outline/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline-redis
  namespace: verein-int
spec:
  type: ClusterIP
  selector:
    app: outline-redis
  ports:
    - port: 6379
      targetPort: redis
      name: redis
