clusters/cluster/apps/verein-int/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: verein-int
spec:
  selector:
    app: outline
  ports:
    - port: 80
      targetPort: http
      name: http
  type: ClusterIP
