clusters/cluster/apps/verein-int/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: verein-int
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: notes.neuland-ingolstadt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  name: http
    - host: notes.neuland.ing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  name: http
  tls:
    - hosts:
        - notes.neuland-ingolstadt.de
        - notes.neuland.ing
      secretName: notes-neuland-ingolstadt-de-tls
